--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,10 +19,10 @@ jobs:
           # flutter-version: '1.12.x' # you can also specify exact version of flutter
       - run: flutter pub get
       # - run: flutter test
-      - run: flutter build apk --release --no-sound-null-safety
+      - run: flutter build apk --no-sound-null-safety
       - name: Push to Releases
         uses: ncipollo/release-action@v1
         with:
-          artifacts: "build/app/outputs/apk/*"
+          artifacts: "build/app/outputs/flutter-apk/*"
           tag: v1.0.${{ github.run_number }}
           token: ${{ secrets.TOKEN }}
